# DroidOs

./: .gitignore  LICENSE  README.md  pyproject.toml
bodies/ig-mk1/: capabilities.yaml  controllers.yaml  diagnostic-rules.yaml  gait-policy.json  limits.yaml  manifest.yaml  robot.urdf.xacro  sensors.yaml  simulation.yaml
bodies/r2-mk1/: capabilities.yaml  controllers.yaml  diagnostic-rules.yaml  limits.yaml  manifest.yaml  robot.urdf.xacro  sensors.yaml  simulation.yaml
config/: body.yaml  droidos.yaml  users.yaml
documentation/: ADMINISTRATION.md  ARCHITECTURE.md  BODY_DEVELOPMENT.md  HOWTO.md  RECOVERY.md  ROADMAP.md  SECURITY_THREAT_MODEL.md  SPEC.md
firmware/safety-controller/: README.md  platformio.ini
firmware/safety-controller/src/: hal.h  main.c  protocol.h
interfaces/droid_interfaces/: CMakeLists.txt  package.xml
interfaces/droid_interfaces/action/: ExecuteTask.action  InspectTarget.action  NavigateToNamedPlace.action  Speak.action
interfaces/droid_interfaces/msg/: BodyCapabilities.msg  DroidState.msg  SafetyState.msg  StructuredIntent.msg  TaskStatus.msg
interfaces/droid_interfaces/srv/: CancelTask.srv  GetStatus.srv  SetBody.srv  ValidateIntent.srv
meta-droidos-rpi/conf/: layer.conf
meta-droidos-rpi/conf/machine/: droidos-rpi5.conf
meta-droidos-tegra/conf/: layer.conf
meta-droidos-tegra/conf/machine/: droidos-orin.conf
meta-droidos/conf/: layer.conf
meta-droidos/conf/distro/: droidos.conf
meta-droidos/recipes-core/images/: droidos-image.bb
meta-droidos/recipes-droid/droidos-bodies/: droidos-bodies.bb
meta-droidos/recipes-droid/droidos-runtime/: droidos-runtime.bb
meta-droidos/recipes-kernel/linux/: linux-droidos.bbappend
meta-droidos/recipes-robotics/packagegroup-droidos-ros/: packagegroup-droidos-ros.bb
meta-droidos/recipes-security/droidos-hardening/: droidos-hardening.bb
meta-droidos/recipes-update/rauc/: rauc_%.bbappend
models/: README.md
rocky/: .dockerignore  .gitignore  README.md  action_schema.json  agent_profile.md  audit.py  capabilities.yaml  executor.py  memory.py  memory_schema.sql  policy.py  policy_rules.md  rocky.conf.example.json  rockyctl  tool_registry.yaml
rocky/packaging/: BURNING.md
rocky/packaging/deb/: build-deb.sh  control  postinst
rocky/packaging/iso/: Dockerfile  build-iso.ps1  build-iso.sh
ros2/: README.md
ros2/droid_bringup/: package.xml
ros2/droid_bringup/launch/: droidos.launch.py
ros2/droid_nodes/: package.xml  setup.py
ros2/droid_nodes/droid_nodes/: __init__.py  brain.py  language_node.py  safety_gateway_node.py  supervisor_node.py
simulation/: README.md  droidos_sim.yaml
src/droidos/: __init__.py  system.py
src/droidos/backends/: __init__.py  base.py  canfd_hardware.py  mock_hardware.py  safety_controller.py  simulation.py
src/droidos/body/: __init__.py  capabilities.py  loader.py  manifest.py
src/droidos/cli/: __init__.py  droid.py  droidctl.py
src/droidos/core/: __init__.py  config.py  errors.py  events.py  logging.py  models.py  states.py
src/droidos/executive/: __init__.py  behaviour_tree.py  executive.py  tasks.py
src/droidos/gait/: __init__.py  policy.py
src/droidos/util/: tabular.py  (+2 more)
systemd/: droid-language.service  droid-safety-gateway.service  droid-supervisor.service  droidos-sysusers.conf  droidos.target
tests/: _harness.py  conftest.py  run_all.py  test_body.py  test_broker.py  test_diagnostics.py  test_gait_voice_update.py  test_integration.py  test_miniyaml.py  test_offline_parser.py  test_safety.py  test_states.py
tools/: build-image.sh  droid.ps1  droidctl.ps1  run-sim.sh
(+32 files in other folders)
