[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droidos"
version = "1.0.0"
description = "DroidOS reference brain, natural-language control runtime for intelligent physical droids"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "DroidOS project" }]
keywords = ["robotics", "ros2", "llm", "droid", "embedded-linux"]

# The core reference brain intentionally has ZERO required third-party
# dependencies so it runs on a bare Raspberry Pi image or a developer laptop.
# Optional extras enable richer providers/backends.
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]          # nicer body-manifest editing (a minimal parser is bundled)
llm = ["httpx>=0.27"]           # OpenAI-compatible HTTP LLM provider
dev = ["pytest>=7.4", "mypy>=1.8", "ruff>=0.4"]

[project.scripts]
droid = "droidos.cli.droid:main"
droidctl = "droidos.cli.droidctl:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
droidos = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = false
